fixed pre element overflow in firefox

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -116,6 +116,7 @@ li li {
 
 pre {
   word-wrap: break-word;
+  white-space: pre-wrap;
   background: $off-white;
   padding: $baseline-height / 2;
 }
